--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Propuesta Hike - KOA</title>
+  <title>AI Workshop - Hike Ecosystem</title>
+  <link rel="icon" type="image/png"
+    href="https://media.licdn.com/dms/image/v2/D4D0BAQFmM3_7u0u9Zw/company-logo_200_200/B4DZar6_14HEAQ-/0/1746641092448/hikethecloud_logo?e=1772668800&v=beta&t=zhOyn8W7vFpz077WRnwg-ULw5v9YUVp10bf2BHMuliY">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
