UI: updated NGR logo, favicon, and replaced emoji with professional SVG

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AI Workshop - Hike Ecosystem</title>
   <link rel="icon" type="image/png"
-    href="https://media.licdn.com/dms/image/v2/D4D0BAQFmM3_7u0u9Zw/company-logo_200_200/B4DZar6_14HEAQ-/0/1746641092448/hikethecloud_logo?e=1772668800&v=beta&t=zhOyn8W7vFpz077WRnwg-ULw5v9YUVp10bf2BHMuliY">
+    href="https://files.slack.com/files-pri/T01Q7LJG952-F0AE67W846N/256.02-03__1_.png?pub_secret=4fad86a427">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
